Fixed bug where grid cells were not stretching to fill available space on either the x or the y axes. -limited the input grid size to more than 0 but no more than 100. -changed dimension logic of grid cells to be controlled in JS by dividing the size of the grid by available viewport space.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body{
     display:flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
    
 }
 .sizeBtn{
@@ -15,36 +18,30 @@ body{
     text-align: center;
 }
 .containerDiv{
-    position:fixed;
-    top:10vh;
-    bottom: auto;
-    left: auto;
-    right:auto;
+   
     width: 90vw;
-    height: 90vh;
+    height: 60%;
     display: flex;
     flex:1;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
+    
+    
 }
 .horizontalContainer{
     display: flex;
     flex:1;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: auto;
-    max-width:100%;
-}
+    justify-self: center;
+    width:100%;
+    /*height set in JS to dynamically adjust to resizing grid */
+    }
+
 .gridElements{
     display: flex;
     flex:1;
-    align-items: center;
-    justify-self: center;
-    height: 5.3vh;
-    width:6.25vw;
     border:1px solid black;
+    /*width & height set in JS to dynamically adjust to resizing grid */
 }
 
 .hover{
